home page added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,3 +8,9 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+ :root  {
+    --cor-logo: #0b1d51;
+    --cor-logo-hover: #08153b;
+    --cor-logo-light: #8bb5f8;
+ }
