--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,10 +1,24 @@
-<div id="<%= dom_id course %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= course.title %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Description:</strong>
-    <%= course.description %>
-  </div>
+<div id="<%= dom_id course %>" class="max-w-sm rounded-b overflow-hidden shadow-lg hover:bg-(--cor-logo-light)">
+  <%= link_to course, class: "flex flex-col h-full" do %>
+    <% if course.image.present? %>
+      <%= image_tag course.image.variant(:thumb), class: "w-full rounded-t" %>
+    <% else %>
+      <%= image_tag "https://placehold.co/1080x720", class: "w-full rounded-t" %>
+    <% end %>
+    <div class="px-6 py-4 flex flex-col justify-between grow">
+      <div>
+        <div class="flex items-center justify-between font-bold text-xl mb-2">
+          <%= course.title %>
+        </div>
+        <p class="text-sm font-extralight">
+          Prof. Vitor Miguel
+        </p>
+        <div>
+          <p class="text-md font-light">
+            Free
+          </p>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
