--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,9 +1,8 @@
-<% content_for :title, "Showing course" %>
-<div class="md:w-2/3 w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
-  <% end %>
-  <h1 class="font-bold text-4xl">Showing course</h1>
-  <%= render @course %>
-  <%= link_to "Back to courses", courses_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+<div class="mx-auto w-full flex flex-col pb-6">
+  <div class="mx-auto w-full flex flex-col items-center">
+    <% if @course.lessons.any? && @course.lessons.first.video.present? %>
+      <%= video_tag @course.lessons.first.video, controls: true, class: "w-2/3 rounded mb-6" %>
+    <% end %>
+    <%= link_to "Back to courses", courses_path, class: "w-full sm:w-2/3 text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-300 hover:bg-gray-50 inline-block font-medium" %>
+  </div>
 </div>
