--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,8 +1,19 @@
 <div class="mx-auto w-full flex flex-col pb-6">
   <div class="mx-auto w-full flex flex-col items-center">
     <% if @course.lessons.any? && @course.lessons.first.video.present? %>
-      <%= video_tag @course.lessons.first.video, controls: true, class: "w-2/3 rounded mb-6" %>
+      <%= video_tag @course.lessons.first.video, controls: true, class: "w-full sm:w-2/3 rounded mb-6" %>
     <% end %>
-    <%= link_to "Back to courses", courses_path, class: "w-full sm:w-2/3 text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-300 hover:bg-gray-50 inline-block font-medium" %>
+    <div class="border p-6 rounded mb-4">
+      <div class="flex flex-wrap justify-start items-center w-full mb-2">
+        <% @course.categories.each do |category| %>
+          <div class="bg-purple-300 rounded-full px-3 py-1 text-sm font-semibold text-purple-800 mr-2 mb-2">
+            <%= category.name %>
+          </div>
+        <% end %>
+      </div>
+      <h1 class="font-bold text-2xl mb-4 underline text-purple-800"><%= @course.lessons.first.title %></h1>
+      <p class="mb-4 text-purple-600"><%= @course.lessons.first.description %></p>
+    </div>
+    <%= link_to "Back to courses", courses_path, class: "w-2/3 text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-purple-300 hover:bg-purple-500 inline-block font-medium" %>
   </div>
 </div>
