--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,8 +11,12 @@
           </div>
         <% end %>
       </div>
-      <h1 class="font-bold text-2xl mb-4 underline text-purple-800"><%= @course.lessons.first.title %></h1>
-      <p class="mb-4 text-purple-600"><%= @course.lessons.first.description %></p>
+      <span><%= @course.lessons.count %> <%= "lesson".pluralize(@course.lessons.count) %></span>
+      <h1 class="text-2xl font-bold"><%= @course.title %></h1>
+      <p class="mb-4 text-purple-600"><%= @course.description %></p>
+    </div>
+    <div>
+      <%= render "sidebar" %>
     </div>
     <%= link_to "Back to courses", courses_path, class: "w-2/3 text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-purple-300 hover:bg-purple-500 inline-block font-medium" %>
   </div>
