--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,10 @@
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body><%= render "shared/navbar/index" %>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body>
+    <%= render "shared/navbar/index" %>
+    <div><%= link_to "Logout", destroy_user_session_path, data: { "turbo-method": :delete } %></div>
+    <main class="container mx-auto mt-28 px-5 flex bg-gray-300">
       <%= yield %>
     </main>
   </body>
